@@ -23,6 +23,7 @@ exe cpp_tokens
     :
       <sysinclude>$(BOOST_ROOT)
       <vc-7_1><*><rtti>off        # workaround for compiler bug
+      <vc-7_1-stlport><*><rtti>off
     :
       <runtime-link>static
       <threading>single
